# vercel-ddns

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  release.yml
cron/: Dockerfile
src/: vercel.rs
