[package]
name = "vercel-ddns"
version = "0.1.1"
authors = [
	"Rodrigo Sanabria <rodrigosanabria22@gmail.com>",
	"Ben Dixon <me@nuro.dev>"
]
edition = "2018"
keywords = ["dynamic", "ddns", "dns", "vercel"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nurodev/vercel-ddns"

[dependencies]
eyre = "0.6.0"
futures = "0.3.5"
log = "0.4.8"
public-ip = { version = "0.1.0", features = ["dns-resolver"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
simplelog = "0.8.0"
structopt = "0.3.15"
thiserror = "1.0.20"
ureq = { version = "1.3.0", features = ["tls"] }
